<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_space"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/intro_img"
                android:layout_width="@dimen/intro_img_size"
                android:layout_height="@dimen/intro_img_size"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:scaleType="centerInside"
                android:src="@drawable/intro1" />

            <TextView
                android:id="@+id/intro_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/medium_space"
                android:paddingRight="@dimen/medium_space"
                android:paddingTop="@dimen/medium_space"
                android:text="@string/intro"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/small_text" />

            <Button
                android:id="@+id/start"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_space"
                android:background="@color/colorAccent"
                android:onClick="startQuiz"
                android:text="@string/start"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="@dimen/medium_space"
                android:paddingEnd="@dimen/medium_space"
                android:paddingLeft="@dimen/large_space"
                android:paddingRight="@dimen/medium_space"
                android:paddingStart="@dimen/large_space"
                android:paddingTop="@dimen/medium_space"
                android:text="@string/q1"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/medium_text" />

            <RadioGroup
                android:id="@+id/options1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/large_space"
                android:paddingStart="@dimen/large_space">

                <RadioButton
                    android:id="@+id/q1_o1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q1_o1"
                    android:textSize="@dimen/small_text" />

                <RadioButton
                    android:id="@+id/q1_o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q1_o2"
                    android:textSize="@dimen/small_text" />

                <RadioButton
                    android:id="@+id/q1_o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q1_o3"
                    android:textSize="@dimen/small_text" />

                <RadioButton
                    android:id="@+id/q1_o4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q1_o4"
                    android:textSize="@dimen/small_text" />
            </RadioGroup>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_space"
                android:background="@color/colorAccent"
                android:onClick="recordAnswer"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="@dimen/medium_space"
                android:paddingEnd="@dimen/medium_space"
                android:paddingLeft="@dimen/large_space"
                android:paddingRight="@dimen/medium_space"
                android:paddingStart="@dimen/large_space"
                android:paddingTop="@dimen/medium_space"
                android:text="@string/q2"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/medium_text" />

            <CheckBox
                android:id="@+id/q2_o1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginStart="@dimen/large_space"
                android:paddingEnd="@dimen/small_space"
                android:paddingLeft="@dimen/small_space"
                android:paddingRight="@dimen/small_space"
                android:paddingStart="@dimen/small_space"
                android:text="@string/q2_o1"
                android:textSize="@dimen/small_text" />

            <CheckBox
                android:id="@+id/q2_o2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginStart="@dimen/large_space"
                android:paddingEnd="@dimen/small_space"
                android:paddingLeft="@dimen/small_space"
                android:paddingRight="@dimen/small_space"
                android:paddingStart="@dimen/small_space"
                android:text="@string/q2_o2"
                android:textSize="@dimen/small_text" />

            <CheckBox
                android:id="@+id/q2_o3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginStart="@dimen/large_space"
                android:paddingEnd="@dimen/small_space"
                android:paddingLeft="@dimen/small_space"
                android:paddingRight="@dimen/small_space"
                android:paddingStart="@dimen/small_space"
                android:text="@string/q2_o3"
                android:textSize="@dimen/small_text" />

            <CheckBox
                android:id="@+id/q2_o4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginStart="@dimen/large_space"
                android:paddingEnd="@dimen/small_space"
                android:paddingLeft="@dimen/small_space"
                android:paddingRight="@dimen/small_space"
                android:paddingStart="@dimen/small_space"
                android:text="@string/q2_o4"
                android:textSize="@dimen/small_text" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_space"
                android:background="@color/colorAccent"
                android:onClick="recordAnswer"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="@dimen/medium_space"
                android:paddingEnd="@dimen/medium_space"
                android:paddingLeft="@dimen/large_space"
                android:paddingRight="@dimen/medium_space"
                android:paddingStart="@dimen/large_space"
                android:paddingTop="@dimen/medium_space"
                android:text="@string/q3"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/response3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_space"
                android:layout_marginLeft="@dimen/large_space"
                android:layout_marginRight="@dimen/medium_space"
                android:layout_marginStart="@dimen/large_space"
                android:inputType="number" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_space"
                android:background="@color/colorAccent"
                android:onClick="recordAnswer"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="@dimen/medium_space"
                android:paddingEnd="@dimen/medium_space"
                android:paddingLeft="@dimen/large_space"
                android:paddingRight="@dimen/medium_space"
                android:paddingStart="@dimen/large_space"
                android:paddingTop="@dimen/medium_space"
                android:text="@string/q4"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/medium_text" />

            <RadioGroup
                android:id="@+id/options4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/large_space"
                android:paddingStart="@dimen/large_space">

                <RadioButton
                    android:id="@+id/q4_o1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q4_o1"
                    android:textSize="@dimen/small_text" />

                <RadioButton
                    android:id="@+id/q4_o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q4_o2"
                    android:textSize="@dimen/small_text" />

                <RadioButton
                    android:id="@+id/q4_o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q4_o3"
                    android:textSize="@dimen/small_text" />

                <RadioButton
                    android:id="@+id/q4_o4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:paddingLeft="@dimen/small_space"
                    android:paddingStart="@dimen/small_space"
                    android:text="@string/q4_o4"
                    android:textSize="@dimen/small_text" />
            </RadioGroup>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_space"
                android:background="@color/colorAccent"
                android:onClick="recordAnswer"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/end_img"
                android:layout_width="@dimen/end_img_width"
                android:layout_height="@dimen/end_img_height"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:scaleType="centerInside"
                android:src="@drawable/end" />

            <TextView
                android:id="@+id/end_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/medium_space"
                android:paddingRight="@dimen/medium_space"
                android:paddingTop="@dimen/medium_space"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/medium_text" />

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_space"
                android:background="@color/colorAccent"
                android:onClick="replayQuiz"
                android:text="@string/replay"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
